force-app/main/default/objects/Listing__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date_Time__c</fullName>
        <label>Actual End Date/Time</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date_Time__c</fullName>
        <label>Actual Start Date/Time</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <label>Areas of Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Art and Design</fullName>
                </value>
                <value>
                    <fullName>Business and Economy</fullName>
                </value>
                <value>
                    <fullName>Career Development and Planning Opportunities</fullName>
                </value>
                <value>
                    <fullName>Culture, Recreation and Sport</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering and Science</fullName>
                </value>
                <value>
                    <fullName>Entrepreneurship, Start Ups &amp; Innovation</fullName>
                </value>
                <value>
                    <fullName>Indigenous Communities and Culture</fullName>
                </value>
                <value>
                    <fullName>Law, Politics and Society</fullName>
                </value>
                <value>
                    <fullName>Medicine and Health (includes Mental Health and Aging)</fullName>
                </value>
                <value>
                    <fullName>Sustainable Development and Environment</fullName>
                </value>
                <value>
                    <fullName>Technology, AI &amp; Data Science</fullName>
                </value>
                <value>
                    <fullName>Women&apos;s Rights</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Associated_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Event</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body_Content__c</fullName>
        <inlineHelpText>The body text or description to display</inlineHelpText>
        <label>Body Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employment Services</fullName>
                </value>
                <value>
                    <fullName>Recruitment Services</fullName>
                </value>
                <value>
                    <fullName>Talent To Solve Business Problems</fullName>
                </value>
                <value>
                    <fullName>Get A Fresh Perspective</fullName>
                </value>
                <value>
                    <fullName>Home Header - New Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Header - Established Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Header - Career Peak Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Header - Planning or Enjoying Retirement</fullName>
                </value>
                <value>
                    <fullName>Home Top Left - New Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Top Left - Established Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Top Left - Career Peak Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Top Left - Planning or Enjoying Retirement</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Left - New Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Left - Established Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Left - Career Peak Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Left - Planning or Enjoying Retirement</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Right - New Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Right - Established Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Right - Career Peak Alumni</fullName>
                </value>
                <value>
                    <fullName>Home Bottom Right - Planning or Enjoying Retirement</fullName>
                </value>
                <value>
                    <fullName>Get Involved Header - New Alumni</fullName>
                </value>
                <value>
                    <fullName>Get Involved Header - Established Alumni</fullName>
                </value>
                <value>
                    <fullName>Get Involved Header - Career Peak Alumni</fullName>
                </value>
                <value>
                    <fullName>Get Involved Header - Planning or Enjoying Retirement</fullName>
                </value>
                <value>
                    <fullName>Get Involved Feature - New Alumni</fullName>
                </value>
                <value>
                    <fullName>Get Involved Feature - Established Alumni</fullName>
                </value>
                <value>
                    <fullName>Get Involved Feature - Career Peak Alumni</fullName>
                </value>
                <value>
                    <fullName>Get Involved Feature - Planning or Enjoying Retirement</fullName>
                </value>
                <value>
                    <fullName>Events Header - New Alumni</fullName>
                </value>
                <value>
                    <fullName>Events Header - Established Alumni</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template which notification emails to the event submitter will follow.</description>
        <label>Email Template</label>
        <referenceTo>Email_Template__c</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_URL__c</fullName>
        <label>Event URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Featured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this listing will appear at the beginning of the listings.</description>
        <label>Featured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Footer_Content__c</fullName>
        <label>Footer Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guest_Registration_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guest Registration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Content__c</fullName>
        <inlineHelpText>Title or Header text to show at the top of the listing</inlineHelpText>
        <label>Header Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Image__c</fullName>
        <label>Header Image</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header_Image_from_URL__c</fullName>
        <inlineHelpText>The URL of the image to be displayed</inlineHelpText>
        <label>Header Image from URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Header_Video_URL__c</fullName>
        <inlineHelpText>Enter embed video link here to display embed video on community.</inlineHelpText>
        <label>Header Video URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Online_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Online Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Private_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Private Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Publicly_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Publicly Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Listing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Enrollment__c</fullName>
        <label>Maximum Number of Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Donation_Requirement__c</fullName>
        <label>Minimum Donation Requirement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Guests__c</fullName>
        <label>Number of Guests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Zone__c</fullName>
        <label>Portal Zone</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Portal_Zone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommend_Type_1__c</fullName>
        <label>Recommend Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Type_2__c</fullName>
        <label>Recommend Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Type_3__c</fullName>
        <label>Recommend Type 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Content_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Registration Template</label>
        <referenceTo>Registration_Template__c</referenceTo>
        <relationshipLabel>Listings</relationshipLabel>
        <relationshipName>Listings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Reminder__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Send Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Look_Who_s_Coming_Minimum__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The minimum amount of participants an event must have before showing the Look Who&apos;s Coming list.</description>
        <label>Show Look Who&apos;s Coming Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show_Look_Who_s_Coming__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show list of participants who are coming.</description>
        <label>Show Look Who&apos;s Coming</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of listing content.</description>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Copy__c</fullName>
        <formula>Text(Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT–04:00) Eastern Daylight Time (America/Indiana/Indianapolis)</fullName>
                </value>
                <value>
                    <fullName>(GMT–04:00) Eastern Daylight Time (America/New_York)</fullName>
                </value>
                <value>
                    <fullName>(GMT–05:00) Central Daylight Time (America/Chicago)</fullName>
                </value>
                <value>
                    <fullName>(GMT–05:00) Central Daylight Time (America/Mexico_City)</fullName>
                </value>
                <value>
                    <fullName>(GMT–05:00) Eastern Standard Time (America/Panama)</fullName>
                </value>
                <value>
                    <fullName>(GMT–06:00) Mountain Standard Time (America/Mazatlan)</fullName>
                </value>
                <value>
                    <fullName>(GMT–06:00) Central Standard Time (America/El_Salvador)</fullName>
                </value>
                <value>
                    <fullName>(GMT–06:00) Mountain Daylight Time (America/Denver)</fullName>
                </value>
                <value>
                    <fullName>(GMT–07:00) Pacific Daylight Time (America/Tijuana)</fullName>
                </value>
                <value>
                    <fullName>(GMT–07:00) Mountain Standard Time (America/Phoenix)</fullName>
                </value>
                <value>
                    <fullName>(GMT–07:00) Pacific Daylight Time (America/Los_Angeles)</fullName>
                </value>
                <value>
                    <fullName>(GMT–08:00) Pitcairn Standard Time (Pacific/Pitcairn)</fullName>
                </value>
                <value>
                    <fullName>(GMT–08:00) Alaska Daylight Time (America/Anchorage)</fullName>
                </value>
                <value>
                    <fullName>(GMT–9:00) Hawaii-Aleutian Standard Time (America/Adak)</fullName>
                </value>
                <value>
                    <fullName>(GMT–10:00) Hawaii-Aleutian Standard Time (Pacific/Honolulu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Phoenix Is.Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45)  Chatham Standard Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Lord Howe Standard Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Australian Central Standard Time ((South Australia) Australia/Adelaide)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (New South Wales) (Australia/Sydney)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time (Queensland) (Australia/Brisbane)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time (Northern Territory) (Australia/Darwin)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korea Standard Time (Asia/Seoul)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_URL__c</fullName>
        <inlineHelpText>Destination for &apos;Find out more&apos; button on some pages (e.g. Careers &amp; Skills)</inlineHelpText>
        <label>Title URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Total_Tickets_Sold__c</fullName>
        <label>Total Tickets Sold</label>
        <summarizedField>Ticket_Type__c.Total_Tickets_Sold__c</summarizedField>
        <summaryFilterItems>
            <field>Ticket_Type__c.Is_Add_On__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Ticket_Type__c.Listing__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Event type brought over from campaign</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Listing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Alumni_Portal_Listings</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Listing__c.Portal_Listing</value>
        </filters>
        <label>All Alumni Portal Listings</label>
    </listViews>
    <listViews>
        <fullName>Career_Page_Listings</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Listing__c.Career</value>
        </filters>
        <label>Career Page Listings</label>
    </listViews>
    <listViews>
        <fullName>Event_Listings</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Listing__c.Event</value>
        </filters>
        <label>Event Listings</label>
    </listViews>
    <listViews>
        <fullName>Listing_Page_Components</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Category__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Listing__c.Portal_Listing</value>
        </filters>
        <label>Listing Page Components</label>
    </listViews>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <recordTypes>
        <fullName>Career</fullName>
        <active>true</active>
        <label>Career</label>
    </recordTypes>
    <recordTypes>
        <fullName>Club</fullName>
        <active>true</active>
        <label>Club</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group</fullName>
        <active>true</active>
        <label>Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>News</fullName>
        <active>true</active>
        <label>News</label>
    </recordTypes>
    <recordTypes>
        <fullName>Photo</fullName>
        <active>true</active>
        <label>Photo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Portal_Listing</fullName>
        <active>true</active>
        <label>Portal Listing</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>